# haystack-core-integrations

integrations/cloudflare-haystack/: README.md  pyproject.toml
integrations/cloudflare-haystack/src/cloudflare_haystack/generators/chat/: chat_generator.py
